# satellite_manager

./: .gitignore  .gitmodules  CMakeLists.txt  package.xml
include/satellite_manager/: data.h  satellite_manager.h  satellite_manager_ros.h  satellite_manager_rosbag.h
matlab/: animateSats.m  plotSats.m  plotSats.m~
msg/: PositionVelocity.msg  SatellitePosition.msg
src/: satellite_manager.cpp  satellite_manager_node.cpp  satellite_manager_ros.cpp  satellite_manager_rosbag.cpp
test/: test.cpp
