<package format="2">
  <name>satellite_manager</name>
  <version>1.1.1</version>
  <description>
    A simple library and node to calcualte satellite positions and velocities given ephemeris data
  </description>
  <maintainer email="superjax08@gmail.com">James James</maintainer>
  <license>BSD-3</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>message_generation</depend>
  <depend>cmake_modules</depend>
  <depend>rosbag</depend>
  <depend>inertial_sense</depend>

</package>
